<resources>
    <string name="app_name">Morse</string>
    <string name="morse">Morse</string>
    <string name="text">Text</string>
    <string name="phrasebook">Phrasebook</string>
    <string name="settings">Settings</string>
    <string name="dit_dah">Tap for dit, hold for dah</string>
    <string name="future_release">To be implemented in a future release</string>
    <string name="back">Back</string>
    <string name="source_morse_alphabet">Source Morse Alphabet</string>
    <string name="output">Output speed</string>
    <string name="method">Method</string>
    <string name="about">About</string>
    <string name="marvin" translatable="false">Crazy Marvin</string>
    <string name="mubeen" translatable="false">Mubeen Ali</string>
    <string name="fahad" translatable="false">Fahad Saleem</string>
    <string name="fredrik" translatable="false">Fredrik Henriccson</string>
    <string name="developer" translatable="false">Developer</string>
    <string name="translate" translatable="false">Translate</string>
    <string name="report" translatable="false">Report a problem</string>
    <string name="view_source" translatable="false">View source</string>
    <string name="contribute" translatable="false">Contribute</string>
    <string name="material_icons" translatable="false">Material Icons</string>
    <string name="android_jetpack" translatable="false">Android Jetpack</string>
    <string name="opensource" translatable="false">Open-source licenses</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">Chinese</string>
    <string name="cyrilic">Cyrillic</string>
    <string name="devanagari">Devanagari</string>
    <string name="greek">Greek</string>
    <string name="hebrew">Hebrew</string>
    <string name="korean">Korean</string>
    <string name="kurdish">Kurdish</string>
    <string name="latin">Latin</string>
    <string name="persian">Persian</string>
    <string name="thai">Thai</string>
</resources>
