<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SourceMorseActivity">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <!-- 📦 Everything inside scrolls -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/source_morse_alphabet"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#2D3139"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/arabic_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/arabic_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/chinese_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/chinese_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chinese"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/cyrilic_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/cyrilic_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cyrilic"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/devanagari_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/devanagari_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/devanagari"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/greek_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/greek_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/greek"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/hebrew_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/hebrew_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hebrew"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/korean_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/korean_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/korean"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/kurdish_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/kurdish_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kurdish"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/latin_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/latin_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latin"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/persian_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/persian_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/persian"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">
                    <RadioButton
                        android:id="@+id/thai_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#98A0AE"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/thai_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thai"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
