<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ibmplexsans_regular"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#2D3139"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_morse_alphabet"
                android:fontFamily="@font/ibmplexsans_regular"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Latin"
                android:fontFamily="@font/ibmplexsans_regular"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/output_content"
        app:layout_constraintTop_toBottomOf="@id/card_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:fontFamily="@font/ibmplexsans_regular"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:paddingBottom="6dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#2D3139"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/output">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:id="@+id/card_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titleMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/method"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_methodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Dot Duration"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/colorBackground" />
            <LinearLayout
                android:id="@+id/card_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/headline_methodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dot Duration"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_durationSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30 ms"
                    android:paddingTop="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:fontFamily="@font/ibmplexsans_regular"
                    />
            </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#2D3139"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:fontFamily="@font/ibmplexsans_regular"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
